fix: font-family for better readability and <code> font-family should be mono

--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -4,6 +4,7 @@
 // stylelint-disable selector-no-qualifying-type, declaration-block-semicolon-newline-after,declaration-block-single-line-max-declarations, selector-no-type, selector-max-type
 
 code {
+  font-family: $mono-font-family;
   padding: 0.2em 0.15em;
   font-weight: 400;
   background-color: $code-background-color;
