--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -2,12 +2,12 @@
 // Typography
 //
 
-//$body-font-family: -apple-system, BlinkMacSystemFont, "helvetica neue", helvetica, roboto, noto, "segoe ui", arial, sans-serif !default;
+$body-font-family: -apple-system, BlinkMacSystemFont, "helvetica neue", helvetica, roboto, noto, "segoe ui", arial, sans-serif !default;
 
 //$body-font-family: "Lexend Deca",Arial,sans-serif;
-$body-font-family: medium-content-serif-font, Georgia, Cambria, "Times New Roman", Times, serif;
-//$mono-font-family: "SFMono-Regular", Menlo, Consolas, Monospace !default;
-$mono-font-family:medium-content-serif-font, Georgia, Cambria, "Times New Roman", Times, serif;
+// $body-font-family: medium-content-serif-font, Georgia, Cambria, "Times New Roman", Times, serif;
+$mono-font-family: "SFMono-Regular", Menlo, Consolas, Monospace, 'Courier New', Courier !default;
+// $mono-font-family:medium-content-serif-font, Georgia, Cambria, "Times New Roman", Times, serif;
 
 //$mono-font-family: "Lexend Deca",Arial,sans-serif !default;
 $root-font-size: 16px !default;         // Base font-size for rems
